tests/negative/parser/non_ident_access_lhs.orng
const x: Wrapper[Int]::init()

fn main() {}